fixed overflow x

--- a/stackBackPack/src/index.scss
+++ b/stackBackPack/src/index.scss
@@ -42,5 +42,6 @@ body {
     .content {
         position: fixed;
         overflow-y: scroll;
+        overflow-x: hidden;
         }
 }
